--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -4,7 +4,7 @@
     --header-bg: #111;
     --header-fg: #fff;
     --hover: #222;
-    --accent: #e11d48;
+    --accent: #ff0037;
     --radius: 12px;
 }
 
