--- a/src/public/partials/categories.html
+++ b/src/public/partials/categories.html
@@ -1,26 +1,26 @@
 <section class="categories">
-    <h3>Categories by region</h3>
+  <h3>Categories by region</h3>
   <ul>
     <li>
-      <a href="#jungle">
+      <a href="/categories-view.html?region=jungle">
         <img src="/img/selva.webp" alt="jungle">
         <span>Jungle</span>
       </a>
     </li>
     <li>
-      <a href="#highlands">
+      <a href="/categories-view.html?region=highlands">
         <img src="/img/sierra.webp" alt="highlands">
         <span>Highlands</span>
       </a>
     </li>
     <li>
-      <a href="#coast">
+      <a href="/categories-view.html?region=coast">
         <img src="/img/costa.webp" alt="coast">
         <span>Coast</span>
       </a>
     </li>
     <li>
-      <a href="#national">
+      <a href="/categories-view.html?region=national">
         <img src="/img/nacional.webp" alt="national">
         <span>National</span>
       </a>
