--- a/src/css/info.css
+++ b/src/css/info.css
@@ -45,7 +45,7 @@
 .info-text .btn {
   display: inline-block;
   padding: 0.75rem 1.5rem;
-  background: #e63946;
+  background: #ff0015;
   color: #fff;
   text-decoration: none;
   border-radius: 10px;
