--- a/src/public/partials/mealdb.html
+++ b/src/public/partials/mealdb.html
@@ -1,4 +1,4 @@
-<section>
-    <h2 class="feature-title">Featured meals</h2>
-    <div id="featured-grid"></div>
+<section class="card">
+  <h2 class="feature-title">Featured meals</h2>
+  <div id="featured-grid"></div>
 </section>
