--- a/src/css/detail-page.css
+++ b/src/css/detail-page.css
@@ -42,13 +42,23 @@
   .detail-grid{ grid-template-columns: 1.15fr 1fr; }
 }
 
+.container-detail{
+ height: 100%;      
+  overflow: hidden;
+}
+
+
+
+
 .hero-img{
   width: 100%;
+  height: 100%;
   aspect-ratio:16/16;
   object-fit: cover;
   border-radius: var(--radius);
   display: block;
   box-shadow: var(--shadow);
+
 }
 
 /* ====== Título y metadatos ====== */
