--- a/src/public/partials/hero.html
+++ b/src/public/partials/hero.html
@@ -8,7 +8,7 @@
         </h1>
         <p class="hero__tagline">Embark on a culinary journey through Peru's rich flavors!
         </p>
-        <a href="#">Explore recipes</a>
+        <a href="/categories-view.html">Explore recipes</a>
 
     </div>
 </section>
