--- a/src/public/partials/info-section.html
+++ b/src/public/partials/info-section.html
@@ -13,6 +13,6 @@
       Each dish tells a story of culture, passion, and connection to the land. 
       From the freshness of ceviche to the warmth of lomo saltado, Peruvian cuisine is not just food — it’s an experience.
     </p>
-    <a href="#" class="btn">Explore Recipes</a>
+    <a href="https://en.wikipedia.org/wiki/Peruvian_cuisine#:~:text=Peruvian%20cuisine%20is%20often%20made,varieties%20of%20preparation%20and%20dishes." target="_blank" class="btn">Learn more</a>
   </div>
 </section>
