--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -13,7 +13,7 @@
     </button>
 
     <ul id="primary-nav" class="nav">
-      <li><a href="/search.html">Search</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li>
         <a id="favorites-link" href="/favorites.html" 
            aria-label="Favorites, 0 items">
@@ -21,8 +21,8 @@
           <span id="fav-count" class="badge" aria-live="polite" aria-atomic="true">(0)</span>
         </a>
       </li>
-      <li><a href="/shopping-list.html">Shopping List</a></li>
-      <li><a href="/suggest.html">Suggest</a></li>
+      <li><a href="/categories-view.html">Search recipes</a></li>
+      
     </ul>
   </nav>
 </header>
